--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.application.name=springmvc
 server.port=8081
+
+# log level? trace, debug, info, warn, error ???
+# debug ???? ??? ???. trace ??? ???
+# ?? info ???? ????? ???? ?. trace, debug? ??? ?? ??
+# info? ????
+# ??? ? ?????.
+logging.level.hello.springmvc=debug
+
+# library? ?????? ? ????
+#logging.level.root=debug
